logfile.log
  File "/Users/elyamdery/TrainingRepo/automation_script.py", line 14
    def  ():
         ^
SyntaxError: invalid syntax
